--- a/.github/workflows/Core-Swarm-Activities.yml
+++ b/.github/workflows/Core-Swarm-Activities.yml
@@ -44,6 +44,6 @@ jobs:
             
             - Today's Activities           
           pinned: false
-          close-previous: true
+          close-previous: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
