--- a/.github/workflows/Core-Swarm-Activities.yml
+++ b/.github/workflows/Core-Swarm-Activities.yml
@@ -26,6 +26,9 @@ jobs:
           body: |
             ### Core Swarm Activities - ${{ env.TODAY }}
             
+            - Previous Day - 
+            - Next Day -
+            
             This Issue is intended as a daily record of Core Swarm Activities. It includes a checklist of who contributed to Core Swarm on this day and a "Today's Activities" section where links to this day's major events and tasks can be linked.
             This approach is still a work in progress and is intended as a prototype for tracking Core Swarm
             ## Today's Contributors ?
@@ -43,7 +46,7 @@ jobs:
             ### Today's Activities
             
             
-            - Today's Activities           )
+            - Today's Activities - 
           pinned: false
           close-previous: false
         env:
