--- a/.github/workflows/After-Town-Hall.yml
+++ b/.github/workflows/After-Town-Hall.yml
@@ -1,1 +1,59 @@
-After-Town-Hall.yml
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+name: After-Town-Hall
+on:
+  schedule:
+    - cron: 0 0 * * 3
+    
+jobs:
+  create_issue:
+    name: Create team sync issue
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+    steps:
+      - name: Today's date
+        run: echo "TODAY=$(date '+ %A, %dth %B, %Y')" >> $GITHUB_ENV
+      - name: Create team sync issue
+        uses: imjohnbo/issue-bot@3daae12aa54d38685d7ff8459fc8a2aee8cea98b
+        with:
+          assignees: "stephen-rowan"
+          labels: "After Town Hall"
+          title: After Town Hall - ${{ env.TODAY }}
+          body: |
+            ### After Town Hall - ${{ env.TODAY }}
+            
+            * Previous After Town Hall - https://github.com/Catalyst-Swarm/Catalyst-Beehive/issues/{{ previousIssueNumber }}
+            * Next Day - 
+            
+            - [x] Prepare Townhall room suggestions and host
+            - [x] Town Hall Topics ?
+
+            # Breakout Sessions
+
+            ## Moderator Checklist for sessions
+
+            - Give co-host access to all the facilitators.
+            - Describe what is this event about
+            - Explain the process how event will be carried through
+            - Give voice to facilitators to allow them invite people to their room
+            - Suggest using collective Miro Board
+
+            ## Host Checklist for sessions
+
+            - The host or co-host should assert the main subject over anyone who misdirects the session.
+            - Before each session a host should have prepared some content or know what they intend to present.
+            - Some preparation always helps
+            - When the session starts the host should ask if the attendees mind being recorded.
+            - The host should record the session (if there are no objections).
+            - The host or co-host should take notes of the session.
+
+
+          pinned: false
+          close-previous: true
+          linked-comments: true 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
